list item align fix

--- a/_sass/general/page.sass
+++ b/_sass/general/page.sass
@@ -53,11 +53,16 @@ section
 
 
 ul
-  list-style-image: url("../favicon.ico")
+  list-style: none
   font-size: 1.3em
   line-height: 50px
+  margin: 0px
+  padding: 0px
   li
+    font-size: 1.3em
     line-height: 50px
+    background: url("../favicon.ico") 0 50% no-repeat
+    padding: 0px 0px 0px 50px
 
 b
   font-weight: normal
